--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@azure/msal-node": "^2.6.6",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "bson": "^6.6.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.0",
     "mongoose-unique-validator": "^5.0.0",
